# lbm-cfd-ascent

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  compile_and_run.sh  polaris_compile_and_run.sh  run.sh
ascent_files/: stable_actions.yaml
include/: insitu_ascent.hpp  lbmd2q9_mpi.hpp
src/: main.cpp
